--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 pulumi>=3.0.0,<4.0.0
 pulumi-aws>=7.0.0,<8.0.0
-numpy==1.24.3
-pandas==1.5.3
-joblib==1.2.0
-scikit-learn==1.2.2
-scipy==1.10.1
-pytest==7.4.2
-setuptools == 67.8.0
-wheel==0.38.4
-flask==3.0.3
-requests
+numpy==2.3.5
+pandas==2.3.3
+joblib==1.5.2
+scikit-learn==1.7.2
+scipy==1.16.3
+pytest==9.0.2
+setuptools==80.9.0
+wheel==0.45.1
+flask==3.1.2
+requests==2.32.5
